--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,7 +74,7 @@ jobs:
       # ---------- DEPLOY (RETRY, SAFE MODE) ----------
       - name: Deploy files (safe mode, retry, no delete)
         run: |
-          for i in 1 2 3; do
+          for i in 1 2 3 4 5 6; do
             echo "Deploy attempt $i..."
 
             rsync -avz \
