--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       # ---------- SSH TEST (RETRY) ----------
       - name: Test SSH connection (retry)
         run: |
-          for i in 1 2 3; do
+          for i in 1 2 3 4 5 6; do
             echo "SSH attempt $i..."
             ssh \
               -i ~/.ssh/id_ed25519 \
