--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           max_attempts: 3
           timeout_minutes: 2
-          command: newman run postman/collection.json --reporters cli --timeout-request 10000 --insecure -H "User-Agent:Mozilla/5.0"
+          command: newman run postman/collection.json --reporters cli --timeout-request 10000 --insecure
 
       # ---------- SSH ----------
       - name: Prepare SSH
