--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,16 +20,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Network Diagnostics
+        run: |
+          curl -v https://quiz.qalibr.ru/get_question.php || echo "CURL FAILED"
+          ping -c 4 quiz.qalibr.ru || echo "PING FAILED"
+
       # ---------- API TESTS (NEWMAN) ----------
       - name: Install Newman
         run: npm install -g newman
 
-      - name: Run API tests (Postman / Newman)
+      - name: Run API tests
         uses: nick-fields/retry@v3
         with:
           max_attempts: 3
           timeout_minutes: 2
-          command: newman run postman/collection.json --reporters cli --timeout-request 10000 --insecure
+          command: npx newman run postman/collection.json --reporters cli --timeout-request 15000 --insecure
+
 
       # ---------- SSH ----------
       - name: Prepare SSH
