--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       # ---------- SSH TEST (RETRY x6, IPv4 FORCED) ----------
       - name: Test SSH connection (retry)
         run: |
-          for i in 1 2 3 4 5 6; do
+          for i in 1; do
             echo "SSH attempt $i..."
             ssh -4 \
               -i ~/.ssh/id_ed25519 \
@@ -67,7 +67,7 @@ jobs:
             sleep 5
 
             if [ "$i" -eq 6 ]; then
-              echo "SSH failed after 6 attempts"
+              echo "SSH failed after 1 attempts"
               exit 1
             fi
           done
